# video_encoder

./: CMakeLists.txt  install.sh
cmake/: video_encoder-config.cmake.in
include/video_encoder/: video_encoder.hpp
src/: video_encoder.cpp
test/: metrics_test.cpp  video_encoder_test.cpp
test/streaming_test/: config.yaml  streaming_server.cpp
test/streaming_test/client/: go.mod  main.go
test/streaming_test/web_client/: index.html  index_webcodecs.html
